WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114151
[EFL] accessibility/svg-group-element-with-title.html is failing
https://bugs.webkit.org/show_bug.cgi?id=114151
Summary
[EFL] accessibility/svg-group-element-with-title.html is failing
Chris Dumez
Reported
2013-04-08 01:42:35 PDT
accessibility/svg-group-element-with-title.html was introduced in
r147801
but is failing on EFL port with the following diff: --- /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/accessibility/svg-group-element-with-title-expected.txt +++ /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/accessibility/svg-group-element-with-title-actual.txt @@ -8,7 +8,7 @@ PASS group1.description is 'AXDescription: SVG TITLE 1' Verify that you can hit-test to the SVG group. -PASS hitTestElement.isEqual(group1) is true +FAIL hitTestElement.isEqual(group1) should be true. Threw exception TypeError: 'null' is not an object (evaluating 'hitTestElement.isEqual') PASS successfullyParsed is true TEST COMPLETE
Attachments
Proposed patch
(4.54 KB, patch)
2013-11-04 08:16 PST
,
Rob Płóciennik
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Płóciennik
Comment 1
2013-11-04 08:16:28 PST
Created
attachment 215921
[details]
Proposed patch
WebKit Commit Bot
Comment 2
2013-11-05 05:38:54 PST
Comment on
attachment 215921
[details]
Proposed patch Clearing flags on attachment: 215921 Committed
r158664
: <
http://trac.webkit.org/changeset/158664
>
WebKit Commit Bot
Comment 3
2013-11-05 05:38:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug