[EFL] accessibility/svg-group-element-with-title.html is failing https://bugs.webkit.org/show_bug.cgi?id=114151

Patch by Robert Plociennik <r.plociennik@samsung.com> on 2013-11-05
Reviewed by Mario Sanchez Prada.

Tools:

atk_component_ref_accessible_at_point(), utilized in
AccessibilityUIElement::elementAtPoint(), is expected to 'get a reference to the
accessible child, if one exists, at the coordinate point specified' and not
explicitly return self in case of lack of child elements. This contradicts with
expected behavior of elementAtPoint(). Therefore, elementAtPoint() is
changed to return self regardless of coordinates specified, provided no child
element could be retrieved, effectively mimicing the behaviour of equivalent
Mac implementation in accessibilityHitTest().

* DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:
(AccessibilityUIElement::elementAtPoint): Fixed.
* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::elementAtPoint): Fixed.

LayoutTests:

Removed failure expectation.

* platform/efl/TestExpectations: The test is no longer failing.

Canonical link: https://commits.webkit.org/141991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158664 268f45cc-cd09-0410-ab3c-d52691b4dbfc